kubernetes/sample-apps/nginx/create-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-demo
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
